# peripheral-protocol-workbench

./: README.md  pyproject.toml
docs/: architecture.md
peripheral_protocol_workbench/: __init__.py  protocol.py  simulator.py  transports.py
scripts/: replay_demo.py  replay_session.py
tests/: test_protocol.py
